welcome.lessons.welcome.array.arraycount9.ArrayCount9.scala.error
arrayCount9:8: error: not found: value sm
  return sm
         ^arrayCount9:4: error: type mismatch;
 found   : Unit
 required: Int
  for (j <- 1 to L-1) {
         ^