welcome.lessons.welcome.array.arraycount9.ArrayCount9.scala.code
def arrayCount9(nums:Array[Int]): Int = {
  var k = 0
  var L :Int = nums.length
  for (j <- 1 to L-1) {
    if (nums(j)==9) {
      k = k+1
  }
  return sm
}
}